# chat-app

./: .env  Cargo.toml  Dockerfile  README.md  database.sql  docker-compose.yml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.extend.yml  docker-compose.yml
src/: main.rs
typescript/: package-lock.json  package.json  tsconfig.json
typescript/public/: index.html
typescript/src/: App.css  App.tsx  Chat.css  Chat.tsx  Login.css  Login.tsx  RoomList.css  RoomList.tsx  helpers.ts
typescript/src/Room/: Message.css  Message.tsx  index.css  index.tsx
